# webepg

./: .gitignore  .pre-commit-config.yaml  GITHUB_WORKFLOWS.md  README.md  WORKFLOW_SUMMARY.md  docker-compose.yml  ruff.toml
backend/: .dockerignore  .gitignore  ADDITIONAL_DATA_API_DOCS.md  ADDITIONAL_DATA_API_TS_EXAMPLE.ts  Dockerfile  FRONTEND_API_DOCS.md  IMPROVEMENTS.md  SOURCE_ID_GUIDE.md  UPGRADE_GUIDE.md  UPGRADE_WITH_UV.md  UV_MIGRATION_GUIDE.md  channel_names.txt  check_upgrades_quick.py  main.py  migrate_to_uv.sh  pre_deploy.sh  pyproject.toml  pyproject.toml.backup  requirements.txt  requirements.txt.backup  upgrade_safely.sh
backend/.cursor/rules/: fastapi.mdc
backend/app/: config.py  exceptions.py  logging_config.py
backend/app/constants/: channel_data.py
backend/app/middleware/: logging_middleware.py
backend/app/models/: schemas.py
backend/app/routers/: channels.py  dates.py  epg.py  foxtel.py_unused  nownext.py  optus.py  sources.py  transmitters.py  xmlepg.py  xmlepg.py.new
backend/app/utils/: channel_name.py  file_operations.py  time_utils.py  xml_processing.py
backend/scripts/: convert_requirements_to_pyproject.py
backend/tools/: extract_channels.py  extract_channels.py_unused  foxtel_epg.py  foxtel_epg2.py  foxtel_epg2.py_unused
backend/xmltvdata/remote/: README_additional_channels.md  foxtel_error_log.txt  xmlepg_additional_channels.csv  xmlepg_additional_channels.csv.backup  xmlepg_channels.csv  xmlepg_error_log.txt
backend/xmltvdata/settings/: local-bu.json  local.json  sources-bu.json  xmltvsources.json
backend/xmltvdata/transmitters/: radio.json  radio_am.json  radio_dab.json  radio_fm.json  television.json  transmitters.json  (+1 more)
(+399 files in other folders)
