[project]
name = "webepg-backend"
version = "1.0.0"
description = "WebEPG FastAPI Backend"
requires-python = ">=3.12"
dependencies = [
    # FastAPI and ASGI server
    "fastapi[standard]>=0.120.3",
    "uvicorn[standard]>=0.38.0",
    "slowapi>=0.1.9",
    # HTTP clients (aiohttp for async, httpx might be transitive from fastapi)
    "aiohttp>=3.13.1",
    # Scheduling
    "APScheduler>=3.11.0",
    # XML processing
    "lxml>=5.3.0",
    # Database
    "mysql-connector-python>=9.5.0",
    # System monitoring
    "psutil>=6.1.1",
    # Timezone handling
    "pytz>=2025.2",
    "tzlocal>=5.3.1",
    # Configuration
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.1.1",
    "PyYAML>=6.0.3",
]

[project.optional-dependencies]
dev = [
    # Code quality and linting
    "ruff>=0.14.2",
    "mypy>=1.18.2",
    "pylint>=4.0.2",
    "isort>=5.13.2",
    # Type stubs
    "lxml-stubs>=0.5.1",
    "types-psutil>=7.0.0.20250601",
    "types-pytz>=2024.1.0.20240417",
    "types-requests>=2.32.0.20241016",
    # Pre-commit hooks
    "pre-commit>=4.0.1",
    # Dependency management tools
    "pip-check>=3.2.1",
    "pip-upgrader>=1.4.15",
]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "C", "B"]
ignore = ["E501"]
fix = true
unfixable = ["F401"]

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
ignore_missing_imports = true
